add verfiy email & Env setup
